# dogo

./: .env.example  .gitignore  README.md  build.gradle  env  fix_tailwind.py  pyproject.toml  readme2.html  settings.gradle
api명세/: 공통코드조회.txt  분실물 api명세.txt  습득물 api 명세.txt
docs/: index.html
docs/superpowers/plans/: 2026-05-18-missing-person-public-api-search.md  2026-05-22-animal-public-api-search.md
output/: lost-item-registration-guide.html
python-match/: pyproject.toml  quantize.py  run.ps1  run.sh
python-match/app/: clip_embedding.py  logger.py  main.py  schemas.py  similarity.py
python-match/benchmark/: dataset.json  run.py
python-match/benchmark/results/: baseline_2026-05-15.json
python-match/benchmarks/: README.md  benchmark_pet_onnx.py  match_cases.json  pet_onnx_result.json  run_benchmark.py
python-match/tests/: test_api.py  test_clip_embedding.py  test_similarity.py
scratch/: ExtractCategories.java  FindCategoriesFromFile.java  PrintSeedHead.java  UpdateCategories.java  animal.html  animal_test.html  categories_report.txt  check_db.py  found.html  get_categories.py  lost.html  missing.html  missing_test.html  update_icons.py
scripts/: README.md  build_recent_seed_dump.py  collect_found_seed.sh  collect_seed.sh  dump_seed.sh  import_db_binary.py  import_recent15_seed_to_dev.sh  import_seed_to_dev.ps1  import_seed_to_dev.py  import_seed_to_dev.sh  migrate_pet_image_embedding_crop.sql  police_found_seed_collector.py  police_seed_collector.py  record_demo.py  run_demo_automation.py  setup_seed_env.ps1
src/main/resources/: schema.sql  (+2 more)
(+566 files in other folders)
