[project]
name = "python-match"
version = "0.1.0"
description = "Semantic similarity sidecar for Dogo item matching"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sentence-transformers[onnx]>=5.5.0",
    "torch>=2.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.9",
    "ultralytics>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
